# SFM

./: .flake8  .gitignore  .npmrc  .pdm.toml  DEVELOPER.md  LICENSE  README.md  SECURITY.md  arch.drawio  handbook.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  SECURITY.md  issue-branch.yml
.github/ISSUE_TEMPLATE/: debt.md  defect.md  feature.md  improvement.md  risk.md
.github/PULL_REQUEST_TEMPLAT/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend_unit_tests.yml  codeQL.yml  codeql-analysis.yml  commit_all.yml  commits_pipeline.yml  componenet_tests  component_tests  createBranch.yml  deploy_github_pages.yml  development_build.yml  development_pipeline.yml  fast_deploy.yml  frontend_build.yml  frontend_unit_tests.yml  integration_tests.yml  production_build.yml  production_pipeline.yml  unit_tests.yml
.github/workflows.yml/: unit_tests.yml
docs/: index.html
docs/assets/: 404.4bf8673e.js  Home.3d8e6d3d.js  index.528cab81.js  risks.38355381.js  vendor.f095e38b.js
pulumi/: Pulumi.yaml  index.ts  package.json
src/: dev-docker-compose.yml  docker-compose.yml  local-docker-compose.yml
src/backend/: .env.example  Dockerfile  alembic.ini  issues.db  manifest.yml  meetings.db  pyproject.toml  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: 1d3daaeebc36_first_migration.py
src/backend/config/: __init__.py  __init__.py.off  settings.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 29f3e3aaae5b_init.py
src/backend/sfm/: .pdm.toml  config.py  database.py  dependencies.py  logger.py  main.py  models.py  utils.py
src/backend/sfm/routes/: root.py
src/backend/sfm/routes/charts/: routes.py
src/backend/sfm/routes/commits/: crud.py
src/backend/sfm/routes/converters/: github_functions.py  routes.py
src/backend/sfm/routes/graphql/: routes.py  schemas.py
src/backend/sfm/routes/graphql/work_items/: routes.py
src/backend/sfm/routes/issues/: crud.py  routes.py
src/backend/sfm/routes/metrics/: crud.py  routes.py
src/backend/sfm/routes/projects/: crud.py  routes.py
src/backend/sfm/routes/utilities/: crud.py  routes.py
src/backend/sfm/routes/work_items/: crud.py  routes.py
src/backend/tests/: .coverage  .coveragerc  conftest.py  pytest.ini  test_root.py  test_test.py
src/backend/tests/test_commits/: test_commits_crud.py
src/backend/tests/test_converters/: mock_converter_functions.py  pull_request_file.py  test_converter_funcs.py  test_converters_routes.py
src/backend/tests/test_converters/testing_files/: commits.json  events.json  issue_events.json  org_data.json  repo_data.json  testing_repo.json  wh_issue_closed.json  wh_issue_labeled_prodDef.json  wh_issue_opened.json  wh_issue_reopened.json  wh_issue_unlabeled.json  wh_pull_request_dev.json  wh_pull_request_main_merged.json  wh_pull_request_main_not_merged.json  wh_repo_created.json  wh_repo_deleted.json  wh_repo_renamed.json
src/backend/tests/test_metrics/: test_metric_routes.py
src/backend/tests/test_misc/: test_config.py
src/backend/tests/test_projects/: test_proj_crud.py  test_proj_routes.py
src/backend/tests/test_utils/: real_payload.json  test_utils_funcs.py
src/backend/tests/test_work_items/: test_work_item_routes.py  test_work_items_crud.py
src/backend/tests/work_items/: test_work_items.py
src/frontend/: .env.development.local.example  .env.example  .env.fastAPI  .env.local  .env.local.example  .npmrc  .npmrc.ci  CHANGELOG.md  Dockerfile  babel.config.js  cypress.json  example.npmrc  example.yarnrc  index.html  package.json  package_old.json  postcss.config.js  tailwind-custom.config.js  tailwind.config.js  tailwind.config_default.js  tsconfig.json  vite.config.js
src/frontend/cypress/fixtures/: changefailurerate.json  deployments.json  leadtimes.json  timetorestore.json
src/frontend/cypress/integration/: Frontend.spec.js  frontend.spec.ts
src/frontend/cypress/plugins/: index.js
src/frontend/nginx/: nginx.conf
src/frontend/public/: index.html
src/frontend/src/: App.vue  filters.js  filters.ts  index.d.ts  main.ts  shims-tailwindforms.d.ts  shims-vue.d.ts  types.ts  utils.spec.ts  utils.ts  vue.config.js  vue.config.js.off
src/frontend/src/components/: Footer.spec.js  Footer.vue  Header.spec.ct.ts  Header.spec.js  Header.spec.ts  Header.vue  InfoModal.spec.ct.ts  InfoModal.vue  LoadingModal.vue  Sidebar.vue  alert.stories.js  infoModal.spec.ts  infoModal.spec.ts.off  infoModal.vue
src/frontend/src/components/charts/: ChangeFailureRate.vue  ChangeFailureRateChart.spec.ct.ts  ChangeFailureRateChart.vue  DeploymentChart.spec.ct.ts  DeploymentChart.spec.ct.ts.off  DeploymentChart.vue  LeadTimeChart.spec.ct.ts  LeadTimeChart.vue  TimeToRestoreChart.spec.ct.ts  TimeToRestoreChart.vue  deploymentChart.vue  leadTimeChart.vue
src/frontend/src/router/: index.js  index.ts
src/frontend/src/store/: index.js
src/frontend/src/stores/: main.ts
src/frontend/src/views/: 401.vue  404.vue  422.vue  About.vue  DORA.vue  Home.vue
src/serverlessBackend/: package-lock.json  package.json
src/serverlessBackend/deployments/: function.json  index.ts
