[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabe Geiger", email = "gabe.geiger@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
