[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabe Geiger", email = "gabe.geiger@gmail.com"},
]
dependencies = [
    "opencensus-ext-azure~=1.0",
    "passlib~=1.7",
    "sqlmodel~=0.0",
    "fastapi~=0.68",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
