[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ian Mungovan", email = "ian.mungovan1@gmail.com"},
]
dependencies = [
    "alembic~=1.7",
    "aniso8601==9.0.1",
    "asgiref==3.4.1",
    "asttokens==2.0.5",
    "atomicwrites==1.4.0; sys_platform == \"win32\"",
    "attrs==21.2.0",
    "bcrypt==3.2.0",
    "cachetools==4.2.4",
    "certifi==2021.5.30",
    "cffi==1.14.6",
    "charset-normalizer==2.0.6; python_version >= \"3\"",
    "click==8.0.1",
    "colorama==0.4.4",
    "coverage==6.0",
    "coverage[toml]==6.0",
    "cryptography==3.4.8",
    "executing==0.8.1",
    "fastapi==0.68.1",
    "google-api-core==1.31.3",
    "google-auth==1.35.0",
    "googleapis-common-protos==1.53.0",
    "graphene==3.0b8",
    "graphql-core==3.1.6",
    "graphql-relay==3.1.0",
    "greenlet==1.1.2; python_version >= \"3\" and (platform_machine == \"aarch64\" or (platform_machine == \"ppc64le\" or (platform_machine == \"x86_64\" or (platform_machine == \"amd64\" or (platform_machine == \"AMD64\" or (platform_machine == \"win32\" or platform_machine == \"WIN32\"))))))",
    "h11==0.12.0",
    "icecream==2.1.1",
    "idna==3.2; python_version >= \"3\"",
    "iniconfig==1.1.1",
    "mako==1.1.5",
    "markupsafe==2.0.1",
    "msal==1.11.0",
    "opencensus==0.7.13",
    "opencensus-context==0.1.2",
    "opencensus.ext.azure==1.0.8",
    "packaging==21.0",
    "passlib==1.7.4",
    "pip==21.1.1",
    "pluggy==1.0.0",
    "protobuf==3.17.3",
    "psutil==5.8.0",
    "py==1.10.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycparser==2.20",
    "pydantic==1.8.2",
    "pygments==2.10.0",
    "pyparsing==2.4.7",
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
    "python-dateutil==2.8.2",
    "python-dotenv==0.19.0",
    "python-editor==1.0.4",
    "pytz==2021.1",
    "requests==2.26.0",
    "rsa==4.7.2; python_version >= \"3.6\"",
    "setuptools==58.1.0",
    "six==1.16.0",
    "sqlalchemy==1.4.25",
    "sqlalchemy2-stubs==0.0.2a17",
    "sqlmodel==0.0.4",
    "starlette==0.14.2",
    "starlette-graphene3==0.5.1",
    "toml==0.10.2",
    "tomli==1.2.1",
    "typing-extensions==3.10.0.2",
    "urllib3==1.26.7",
    "uvicorn==0.15.0",
    "pytest-mock~=3.6",
    "psycopg2-binary~=2.9",
    "asyncpg~=0.25"]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
